# GerSoMeTokenExtractor

./: .gitignore  LICENSE  README.md  pyproject.toml
ger_some_token_extractor/: __init__.py  spacy_components.py  token_extractor.py
