[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ger_some_token_extractor"
version = "0.1"
description = "This library provides a spacy pipeline with custom components for extracting tokens from German social media texts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "spacy",
    "treetaggerwrapper",
    "somajo",
    "someweta",
    "ijson"
]